[project]
name = "buildkit-python-workspace"
version = "0.1.8"
description = "Workspace for Zeroshot Python packages."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = ["packages/*"]

[dependency-groups]
dev = [
  "build>=1.2.2",
  "pypdf>=5.0",
  "pyright>=1.1.398",
  "pytest>=8.3.5",
  "pytest-asyncio>=0.26.0",
  "pytest-cov>=6.1.1",
  "pytest-timeout>=2.3",
  "ruff>=0.11.8",
]

[tool.pytest.ini_options]
addopts = ["-ra", "--strict-config", "--strict-markers", "--import-mode=importlib"]
asyncio_mode = "auto"
markers = [
  "integration: marks tests that exercise external systems or cross-package integrations",
  "eval: marks tests that exercise real LLM inference (requires a running model)",
]
testpaths = ["packages"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "RUF", "UP"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
include = ["conftest.py", "packages"]
exclude = ["**/__pycache__", "**/dist", ".venv"]
venvPath = "."
venv = ".venv"
extraPaths = [
  "packages/agent-experiments/src",
  "packages/agentic-workflows/src",
  "packages/commons/src",
  "packages/commons-injectors/src",
  "packages/commons-testing/src",
  "packages/openai-utils/src",
  "packages/sql-decorators/src",
]
